--- a/styles.css
+++ b/styles.css
@@ -360,11 +360,11 @@ a img {
     display: none;
 }
 
-/* .card-body h5 {
-    font-size: 1.5rem;
+.card-body h5 {
+    font-size: 1rem;
 }
 
-.card-body p {
+/* .card-body p {
     font-size: 1rem;
 } */
 
