--- a/styles.css
+++ b/styles.css
@@ -62,9 +62,6 @@ main {
     height: 100%;
 }
 
-/* .carousel-box {
-    margin-top: 3rem;
-} */
 .nav-list {
     list-style: none;
     display: flex;
@@ -94,15 +91,10 @@ main {
     object-fit: cover;
   }
 
-/* .about-box {
-    display: flex;
-} */
-
 .linha0 {
     width: 100%;
     height: 2px;
     background: #ffcb4d;
-    /* z-index: 10; */
 }
 
 .linha {
@@ -131,7 +123,6 @@ main {
     display: flex;
     margin: 1rem;
     text-align: center;
-
 }
 
 .info {
@@ -182,6 +173,8 @@ main {
 }
 
 .card img {
+    height: 30rem;
+    object-fit: cover;
     border-top-left-radius: calc(1.25rem - 1px);
     border-top-right-radius: calc(1.25rem - 1px);
 }
@@ -232,7 +225,6 @@ main {
 .form-box {
     display: flex;
     justify-content: center;
-
 }
 
 form {
@@ -322,7 +314,6 @@ footer {
 .footer-box {
     width: auto;
     height: 250px;
-    /* background-color: aqua; */
     text-align: center;
     text-transform: uppercase;
     margin: 5px;
@@ -363,10 +354,6 @@ a img {
 .card-body h5 {
     font-size: 1rem;
 }
-
-/* .card-body p {
-    font-size: 1rem;
-} */
 
 @media (max-width: 780px) {
 
@@ -536,8 +523,6 @@ a img {
         padding: 1rem;
         border: none;
         width: 100%;
-        /* border-top: 2px solid #DEB887;
-        border-bottom: 2px solid #DEB887;; */
     }
 
     .info h2 {
