--- a/styles.css
+++ b/styles.css
@@ -5,22 +5,18 @@
     font-family: 'Montserrat', sans-serif;
     scroll-behavior: smooth;
 }
-  
-/* header {
-    position: fixed;
-    width: 100%;
-    z-index: 3;
-} */
 
 nav a {
     color: #ffffff;
     text-decoration: none;
     transition: 0.3s;
+    scroll-behavior: smooth;
 }
 
 nav a:hover {
     /* opacity: 0.7; */
     color: #deb887;
+    scroll-behavior: smooth;
 }
 
 .nav-list a:hover {
@@ -31,6 +27,7 @@ nav a:hover {
     color: burlywood;
     border-bottom: #ffffff 3px solid;
     padding-bottom: 2.5vh;
+    scroll-behavior: smooth;
     /* color: #c879ec; */
 }
 
@@ -38,12 +35,14 @@ nav a:hover {
     color: burlywood;
     border-bottom: #ffffff 3px solid;
     padding-bottom: 2.5vh;
+    scroll-behavior: smooth;
 }
 
 .logo {
     font-size: 18px;
     text-transform: uppercase;
     letter-spacing: 4px;
+    scroll-behavior: smooth;
 }
 
 nav {
@@ -633,3 +632,47 @@ a img {
         font-size: 1rem;
     }
 }
+
+
+.btn-topo {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #deb88785;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+  }
+  
+  .arrow {
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid #fff;
+  }
+
+  .btn-topo:hover {
+    background-color: #DEB887;
+  }
+  
+  /* .arrow:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: -10px;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid #333;
+  } */
+  
