modified:   index.html 	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -357,7 +357,7 @@ a img {
 }
 
 .projects-box .mb-3 {
-    width: 50%;
+    width: 71%;
 }
 
 @media (max-width: 780px) {
@@ -435,7 +435,7 @@ a img {
     .projects-box {
         display: flex;
         justify-content: center;
-        flex-direction: column-reverse;
+        flex-direction: column;
         align-items: center;
         margin-top: 1rem;
     }
