--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
     scroll-behavior: smooth;
 }
 
+* h1 {
+    text-transform: uppercase;
+}
+
 nav a {
     color: #ffffff;
     text-decoration: none;
@@ -109,7 +113,7 @@ main {
 }
 
 .about-tittle h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: #DEB887;
 }
 
@@ -149,10 +153,21 @@ main {
 }
 
 .projects-tittle {
-    font-size: 1.5rem;
     text-align: center;
     margin-top: 2rem;
     margin-bottom: 2rem;
+    color: #DEB887;
+}
+
+.projects-tittle h1 {
+    font-size: 2rem;
+}
+
+.services-tittle {
+    font-size: 1.3rem;
+    text-align: center;
+    margin-top: -2rem;
+    margin-bottom: 2.5rem;
     color: #DEB887;
 }
 
@@ -293,6 +308,10 @@ footer {
     color: #DEB887;
 }
 
+.footer-tittle h1 {
+    font-size: 2rem;
+}
+
 .footer-area {
     display: flex;
     justify-content: center;
@@ -373,11 +392,16 @@ footer a img {
     display: none;
     flex-direction: column;
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 .services-box p {
     font-size: 1.5rem;
+    margin: -1px 0 0 5px;
+}
+
+.services-box-p {
+    margin-top: -1rem;
 }
 
 @media (max-width: 780px) {
@@ -405,15 +429,28 @@ footer a img {
 
     .services-box {
         display: flex;
+        align-items: center;
+        background: antiquewhite;
+        margin: 0 2rem 1rem 2rem;
+        border-radius: 5px;
+        height: 5rem;
+    }
+
+    #projects-id {
+        display: none;
+    }
+
+    .p-center {
         text-align: center;
     }
 
     .services-box p {
         font-size: 1rem;
+        text-align: left;
     }
 
     .footer-tittle h1{
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 
     .copyright {
@@ -425,9 +462,10 @@ footer a img {
     }
 
     .btn-top {
+        margin: 5px;
         margin-top: 1rem;
         margin-bottom: -5px;
-        width: 100%;
+        width: auto;
         height: auto;
         display: flex;
         justify-content: center;
@@ -441,7 +479,11 @@ footer a img {
             background-color: #DEB887;
             color: #000;
             padding: 0.5rem;
-            border-radius: 0px;
+            border-radius: 5px;
+    }
+
+    .btn-top a img {
+        margin-right: 5px;
     }
     
     .btn-top a {
@@ -463,7 +505,7 @@ footer a img {
     }
 
     .projects-tittle h1{
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 
     .projects-box {
@@ -553,7 +595,7 @@ footer a img {
     }
 
     .about-tittle h1 {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         margin-bottom: -1rem;
     }
 
