--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,13 @@ main {
     background: #FFBE0B;
 }
 
+.linha5 {
+    margin-top: 5rem;
+    width: 100%;
+    height: 2px;
+    background: #FFBE0B;
+}
+
 .linha {
     width: 100%;
     height: 2px;
@@ -122,17 +129,43 @@ main {
     padding: 0 15px;
 }
 
+.about-box {
+    /* margin-top: 5rem; */
+    display: flex;
+    /* align-items: center; */
+    flex-direction: row-reverse;
+    background-color: #fff3ca;
+}
+
 .about-info {
     display: flex;
+    width: 50%;
+    flex-direction: column;
     margin: 1rem;
-    text-align: center;
+    text-align: justify;
+    flex-wrap: nowrap;
+    align-items: center;
+    padding: 3rem;
+}
+
+.about-info p{
+    font-size: 1.3rem;
+}
+
+.about-img {
+    display: flex;
+    width: 49%;
+}
+
+.img-about {
+    width: 100%;
 }
 
 .info {
     padding: 0 1rem 0 1rem;
     border-right: 2px solid #FFBE0B00;
     border-left: 2px solid #FFBE0B00;
-    width: 50%;
+    width: 100%;
 }
 
 .info h2 {
@@ -161,7 +194,7 @@ main {
 }
 
 .projects-tittle3 {
-    width: 100%;
+    width: 95%;
     text-align: center;
     margin-top: 2rem;
     margin-bottom: 2rem;
@@ -170,6 +203,10 @@ main {
 }
 
 .projects-tittle h1 {
+    font-size: 2rem;
+    scroll-margin-top: 2.5rem;
+}
+.projects-tittle3 h1 {
     font-size: 2rem;
     scroll-margin-top: 2.5rem;
 }
@@ -420,6 +457,9 @@ footer a img {
     margin-top: -1rem;
 }
 
+
+
+
 @media (max-width: 780px) {
 
     body{
@@ -445,6 +485,18 @@ footer a img {
 
     .footer-box {
         width: auto;
+    }
+
+    .about-img {
+        display: none;
+    }
+
+    .about-box {
+        background-color: none;
+    }
+
+    .about-info {
+        width: 100%;
     }
 
     .services-box {
@@ -544,6 +596,11 @@ footer a img {
         font-size: 1.3rem;
     }
 
+    .projects-tittle3 h1{
+        font-size: 1.3rem;
+        margin-bottom: -1rem;
+    }
+
     .projects-tittle {
         margin-bottom: 1rem;
         margin-left: 5px;
@@ -621,7 +678,7 @@ footer a img {
     .about-info {
         display: flex;
         flex-direction: column;
-        margin: 1rem;
+        margin: 0rem;
         text-align: center;
         padding-left: 1rem;
         padding-right: 1rem;
@@ -636,6 +693,8 @@ footer a img {
         font-size: 1rem;
         margin-bottom: -1.5rem;
         text-align: justify;
+        text-justify: inter-word;
+        word-spacing: 0px; /* Ajuste o valor conforme necessário */
     }
 
     .about-tittle {
@@ -653,8 +712,15 @@ footer a img {
         display: none;
     }
 
+    .linha5 {
+        display: none;
+        margin-top: 1;
+    }
+
     .about-box {
-        margin-bottom: 4rem;
+        background-color: #fff;
+        display: flex;
+        margin-bottom: 1rem;
     }
 
     .info {
